--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,38 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page title</title>
+    <title>IceCream</title>
+    <!-- modern normalize -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <!-- fonts -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com" />
     <link rel="stylesheet" href="./sass/index.scss" />
     <script type="module" src="./index.js"></script>
   </head>
   <body>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
+    <!-- header -->
+    <include src=""></include>
+    <main>
+      <!-- hero section-->
+      <include src=""></include>
+      <!-- products section -->
+      <include src=""></include>
+      <!-- about section -->
+      <include src=""></include>
+      <!-- advantages section -->
+      <include src=""></include>
+      <!-- customer reviews section -->
+      <include src=""></include>
+      <!-- contacts section -->
+      <include src=""></include>
+    </main>
+    <!-- footer -->
+    <include src=""></include>
   </body>
 </html>
