--- a/src/index.html
+++ b/src/index.html
@@ -12,29 +12,31 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <!-- fonts -->
+    <!-- fonts - Вікторія Нікіфорова-->
     <link rel="stylesheet" href="https://fonts.googleapis.com" />
     <link rel="stylesheet" href="./sass/index.scss" />
     <script type="module" src="./index.js"></script>
   </head>
   <body>
-    <!-- header -->
+    <!-- header - Ольга Дроботюк-->
     <include src=""></include>
     <main>
-      <!-- hero section-->
+      <!-- hero section - Юрій Сиволапенко -->
       <include src=""></include>
-      <!-- products section -->
+      <!-- products section - Тарас Варварич -->
       <include src=""></include>
-      <!-- about section -->
+      <!-- about section - Ірина Дружелюбова -->
       <include src=""></include>
-      <!-- advantages section -->
+      <!-- advantages section - Віктор Криворотов -->
       <include src=""></include>
-      <!-- customer reviews section -->
+      <!-- gallery section - Ірина Бучма -->
       <include src=""></include>
-      <!-- contacts section -->
+      <!-- customer reviews section - Олександр Олійник -->
+      <include src=""></include>
+      <!-- contacts section - Тетяна Яблонська -->
       <include src=""></include>
     </main>
-    <!-- footer -->
+    <!-- footer - Анна Шалар -->
     <include src=""></include>
   </body>
 </html>
