add partials and scss

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
       <!-- customer reviews section - Олександр Олійник -->
       <include src=""></include>
       <!-- contacts section - Тетяна Яблонська -->
-      <include src=""></include>
+      <include src="./partials/contacts.html"></include>
     </main>
     <!-- footer - Анна Шалар -->
     <include src=""></include>
