--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
       <!-- products section - Тарас Варварич -->
       <include src=""></include>
       <!-- about section - Ірина Дружелюбова -->
-      <include src=""></include>
+      <include src="./partials/about.html"></include>
       <!-- advantages section - Віктор Криворотов -->
       <include src=""></include>
       <!-- gallery section - Ірина Бучма -->
