--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
     <include src=""></include>
     <main>
       <!-- hero section - Юрій Сиволапенко -->
-      <include src=""></include>
+      <include src="./partials/hero.html"></include>
       <!-- products section - Тарас Варварич -->
       <include src=""></include>
       <!-- about section - Ірина Дружелюбова -->
