--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     <!-- header - Ольга Дроботюк-->
-    <include src=""></include>
+    <include src="./partials/header.html"></include>
     <main>
       <!-- hero section - Юрій Сиволапенко -->
       <include src=""></include>
