--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
       <!-- about section - Ірина Дружелюбова -->
       <include src=""></include>
       <!-- advantages section - Віктор Криворотов -->
-      <include src=""></include>
+      <include src="./partials/advanteges.html"></include>
       <!-- gallery section - Ірина Бучма -->
       <include src=""></include>
       <!-- customer reviews section - Олександр Олійник -->
