--- a/src/index.html
+++ b/src/index.html
@@ -43,6 +43,6 @@
       <include src="./partials/contacts.html"></include>
     </main>
     <!-- footer - Анна Шалар -->
-    <include src=""></include>
+    <include src="./partials/footer.html"></include>
   </body>
 </html>
