add about (дубль 2)

--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
       <!-- products section - Тарас Варварич -->
       <include src="./partials/products.html"></include>
       <!-- about section - Ірина Дружелюбова -->
-      <include src=""></include>
+      <include src="./partials/about.html"></include>
       <!-- advantages section - Віктор Криворотов -->
       <include src="./partials/advanteges.html"></include>
       <!-- gallery section - Ірина Бучма -->
