--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
       <!-- modal-ingredients - -->
       <include src=""></include>
       <!-- about section - Ірина Дружелюбова -->
-      <include src=""></include>
+      <include src="./partials/about.html"></include>
       <!-- about-modal - -->
       <include src=""></include>
       <!-- advantages section - Віктор Криворотов -->
