update markup and file names

--- a/src/index.html
+++ b/src/index.html
@@ -43,12 +43,14 @@
       <include src=""></include>
       <!-- advantages section - Віктор Криворотов -->
       <include src="./partials/advanteges.html"></include>
-      <!-- gallery section - Ірина Бучма -->
-      <include src=""></include>
-      <!-- customer reviews section - Олександр Олійник -->
-      <include src=""></include>
-      <!-- contacts section - Тетяна Яблонська -->
-      <include src="./partials/contacts.html"></include>
+      <div class="background">
+        <!-- gallery section - Ірина Бучма -->
+        <include src=""></include>
+        <!-- customer reviews section - Олександр Олійник -->
+        <include src=""></include>
+        <!-- contacts section - Тетяна Яблонська -->
+        <include src="./partials/contacts.html"></include>
+      </div>
       <!-- location-modal - -->
       <include src=""></include>
       <!-- franchise-modal - Ольга Дроботюк -->
