--- a/src/index.html
+++ b/src/index.html
@@ -56,5 +56,7 @@
     </main>
     <!-- footer - Анна Шалар -->
     <include src="./partials/footer.html"></include>
+    <!-- products-modal - Тарас Варварич -->
+    <include src="./partials/products_modal.html"></include>
   </body>
 </html>
