--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <!-- swiper -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
     <!-- fonts - Вікторія Нікіфорова-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -38,11 +40,19 @@
       <!-- gallery section - Ірина Бучма -->
       <include src=""></include>
       <!-- customer reviews section - Олександр Олійник -->
-      <include src=""></include>
+      <include src="./partials/customer.html"></include>
       <!-- contacts section - Тетяна Яблонська -->
       <include src="./partials/contacts.html"></include>
     </main>
     <!-- footer - Анна Шалар -->
     <include src=""></include>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+    <script>
+      var swiper = new Swiper(".mySwiper", {
+        pagination: {
+          el: ".swiper-pagination",
+        },
+      });
+    </script>
   </body>
 </html>
