--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
     />
 
     <link rel="stylesheet" href="./sass/main.scss" />
+    <include src="./partials/animation.html"></include>
     <script type="module" src="./index.js"></script>
   </head>
   <body>
@@ -31,7 +32,7 @@
     <main>
       <!-- hero section - Юрій Сиволапенко -->
       <include src=""></include>
-      <!-- products-card - -->
+      <!-- products-modal - Тарас Варварич -->
       <include src=""></include>
       <!-- products section - Тарас Варварич -->
       <include src="./partials/products.html"></include>
@@ -39,7 +40,7 @@
       <include src=""></include>
       <!-- about section - Ірина Дружелюбова -->
       <include src="./partials/about.html"></include>
-      <!-- about-modal - -->
+      <!-- about-modal - Ольга Дроботюк -->
       <include src=""></include>
       <!-- advantages section - Віктор Криворотов -->
       <include src="./partials/advanteges.html"></include>
@@ -51,9 +52,9 @@
         <!-- contacts section - Тетяна Яблонська -->
         <include src="./partials/contacts.html"></include>
       </div>
-      <!-- location-modal - -->
+      <!-- location-modal - Тетяна Яблонська -->
       <include src=""></include>
-      <!-- franchise-modal - Ольга Дроботюк -->
+      <!-- franchise-modal - Тетяна Яблонська -->
       <include src=""></include>
       <!-- modal-backdrop - Тетяна Яблонська -->
       <include src="./partials/modal-backdrop.html"></include>
