--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
       <!-- about section - Ірина Дружелюбова -->
       <include src="./partials/about.html"></include>
       <!-- advantages section - Віктор Криворотов -->
-      <include src="./partials/advanteges.html"></include>
+      <include src="./partials/advantages.html"></include>
       <!-- gallery section - Ірина Бучма -->
       <include src=""></include>
       <!-- customer reviews section - Олександр Олійник -->
