--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
       <!-- about-modal - Ольга Дроботюк -->
       <include src=""></include>
       <!-- advantages section - Віктор Криворотов -->
-      <include src="./partials/advanteges.html"></include>
+      <include src="./partials/advantages.html"></include>
       <div class="background">
         <!-- gallery section - Ірина Бучма -->
         <include src=""></include>
