--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
     <include src="./partials/nav-menu.html"></include>
     <main>
       <!-- hero section - Юрій Сиволапенко -->
-      <include src=""></include>
+      <include src="./partials/hero.html"></include>
       <!-- products-modal - Тарас Варварич -->
       <include src=""></include>
       <!-- products section - Тарас Варварич -->
