--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <!-- swiper css -->
+    <link rel="stylesheet" href="./sass/swiper-bundle.css">
     <!-- fonts - Вікторія Нікіфорова -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -48,7 +50,7 @@
         <!-- gallery section - Ірина Бучма -->
         <include src=""></include>
         <!-- customer reviews section - Олександр Олійник -->
-        <include src=""></include>
+        <include src="./partials/customer.html"></include>
         <!-- contacts section - Тетяна Яблонська -->
         <include src="./partials/contacts.html"></include>
       </div>
@@ -64,4 +66,6 @@
     <!-- products-modal - Тарас Варварич -->
     <include src="./partials/products_modal.html"></include>
   </body>
+  <script src="./swiper-bundle.js"></script>
+  <script src="./swiper.js" ></script>
 </html>
