update img to the center position

--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
       <include src="./partials/advantages.html"></include>
       <div class="background">
         <!-- gallery section - Ірина Бучма -->
-        <include src=""></include>
+        <include src="./partials/gallery.html"></include>
         <!-- customer reviews section - Олександр Олійник -->
         <include src=""></include>
         <!-- contacts section - Тетяна Яблонська -->
