--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
     <include src="./partials/animation.html"></include>
     <script type="module" src="./index.js"></script>
   </head>
-  <body>
+  <body scroll>
     <!-- header - Вікторія Нікіфорова -->
     <include src="./partials/header.html"></include>
     <!-- navigation-menu - Анастасія Савенок -->
