--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,9 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&family=Seymour+One&display=swap"
       rel="stylesheet"
     />
+    <!-- customer reviews section swiper - Олександр Олійник -->
+    <link rel="stylesheet" href="./sass/utils/swiper-bundle.min.css">
+    <script src="./js/swiper-bundle.min.js"></script>
 
     <link rel="stylesheet" href="./sass/main.scss" />
     <include src="./partials/animation.html"></include>
@@ -48,7 +51,7 @@
         <!-- gallery section - Ірина Бучма -->
         <include src="./partials/gallery.html"></include>
         <!-- customer reviews section - Олександр Олійник -->
-        <include src="./partials/customer-revievs.html"></include>
+        <include src="./partials/customer.html"></include>
         <!-- contacts section - Тетяна Яблонська -->
         <include src="./partials/contacts.html"></include>
       </div>
