Модальне вiкно about

--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
       <!-- about section - Ірина Дружелюбова -->
       <include src="./partials/about.html"></include>
       <!-- about-modal - Ольга Дроботюк -->
-      <include src=""></include>
+      <include src="./partials/modal-about.html"></include>
       <!-- advantages section - Віктор Криворотов -->
       <include src="./partials/advantages.html"></include>
       <div class="background">
