Додає модалку (без картинки(!))

--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
       <!-- products section - Тарас Варварич -->
       <include src="./partials/products.html"></include>
       <!-- modal-ingredients - -->
-      <include src=""></include>
+      <include src="./partials/modal-ingredients.html"></include>
       <!-- about section - Ірина Дружелюбова -->
       <include src="./partials/about.html"></include>
       <!-- about-modal - Ольга Дроботюк -->
