--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
         <!-- gallery section - Ірина Бучма -->
         <include src="./partials/gallery.html"></include>
         <!-- customer reviews section - Олександр Олійник -->
-        <include src="./partials/customer-revievs.html"></include>
+        <include src="./partials/customer.html"></include>
         <!-- contacts section - Тетяна Яблонська -->
         <include src="./partials/contacts.html"></include>
       </div>
