--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
 
     <script type="module" src="./index.js"></script>
   </head>
-  <body scroll>
+  <body data-scroll>
     <!-- header - Вікторія Нікіфорова -->
     <include src="./partials/header.html"></include>
     <!-- navigation-menu - Анастасія Савенок -->
