--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>IceCream</title>
-    <link rel="icon" href="favicon.ico" />
+    <link rel="icon" href="./images/favicon/favicon.png" type="image/x-con" />
     <!-- modern normalize - Анастасія Савенок -->
     <link
       rel="stylesheet"
