--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="./sass/main.scss" />
   </head>
   <body data-scroll>
-    <!-- header - Вікторія Нікіфорова -->
+    <!-- header - Вікторія Никифорова -->
     <include src="./partials/header.html"></include>
     <!-- navigation-menu - Анастасія Савенок -->
     <include src="./partials/nav-menu.html"></include>
@@ -36,7 +36,7 @@
       <include src="./partials/products_modal.html"></include>
       <!-- products section - Тарас Варварич -->
       <include src="./partials/products.html"></include>
-      <!-- modal-ingredients - -->
+      <!-- modal-ingredients - Тарас Варварич -->
       <include src="./partials/modal-ingredients.html"></include>
       <!-- about section - Ірина Дружелюбова -->
       <include src="./partials/about.html"></include>
